--- a/ENTP_Project/Views/App/Database.cshtml
+++ b/ENTP_Project/Views/App/Database.cshtml
@@ -34,7 +34,7 @@
                     <td>@user.Role</td>
                     <td>@user.Diet</td>
                     <td>@user.Plan</td>
-
+                    <td>@user.Weight</td>
                 </tr>
             }
         }
